File name correctted for everyday page, navbar items updated to reflect new pages.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
   <meta name="robots" content="ALL">
   <meta name="keywords" content="英会話　神戸, 英会話　三宮, 英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
   <meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！"
-  />
+  <meta name="Description" content="英会話なら神戸・三宮のサンミハールランゲージサービス。教室は元町からも5分。医療、航空、貿易、ビジネス、留学そしてやり直しの英語をマンツーマンで効果的に。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達。英検、TOEIC、TOEFL、IELTS他試験対策も万全です。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。神戸三宮で無料体験レッスン受付中！" />
 
   <meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
   <meta property="og:type" content="school">
@@ -37,10 +36,8 @@
   <title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
 
   <!--     Fonts and icons     -->
-  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"
-  />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"
-  />
+  <link rel=" stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
   <!-- CSS Files -->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
@@ -92,8 +89,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%"
-            width="auto">
+          <img id="sunmihall-logo" src="assets/img/navbar-logo-white.png" alt="神戸・三宮の英会話サンミハールランゲージサービス" height="120%" width="auto">
         </a>
       </div>
 
@@ -169,32 +165,32 @@
             </a>
             <ul class="dropdown-menu">
               <li>
-                <a href="#">
+                <a href="lesson-course-everyday.html">
                   日常英会話
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-everyday.html">
                   ビジネス英会話
                 </a>
               </li>
               <li>
-                <a href="lesson-course-info.html">
+                <a href="lesson-course-toeic.html">
                   TOEIC・英検
                 </a>
               </li>
               <li>
-                <a href="lesson-course-info.html">
+                <a href="lesson-course-toeic.html">
                   TOEFL・IELTS
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-airline.html">
                   医療英会話
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-airline.html">
                   企業内語学研修
                 </a>
               </li>
@@ -505,7 +501,8 @@
               </ul> -->
 
               <p class="text-dark-gray">
-                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
+                月1回から8回までの月謝制や、まとめてお得なチケット制など質の高いネイティブ講師のマンツーマンの個人レッスンを低料金でご提案致します。また、受け放題のフリーカンバセーションは何回受けても1ヶ月￥9,180で超お得！<br>
+                個人（マンツーマン）で英会話レッスンを受けられたい方、WEB・Skypeを使ってオンラインで英会話レッスンを受けられたい方、お友達やご夫婦の2人で一緒に英会話レッスンを受けられたい方、少人数のグループで自由に英会話を楽しみたい方など様々なレッスンスタイル、料金プランをお選び頂けます。
               </p>
               <a href="pricing.html" class="btn btn-primary margin-top-small">
                 レッスン・料金プランを詳しく見る
@@ -742,7 +739,8 @@
                     <li>ご予算に合わせてしかも低料金で無理なく計画的に英会話レッスンを受けられます。遠慮なくご相談ください。</li>
                     <li>無理な入会はさせません。学びたいという気持ちが一番大事です。説明を聞きに来られても無料体験レッスンを受けられても執拗な勧誘は一切致しません。</li>
                     <li>授業はネイティブ、授業以外英会話の質問に至るまですべては日本人スタッフが日本語で対応致します。</li>
-                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。 いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
+                    <li>有効期限内であればいつでも解約が出来ます。未使用の受講料の80％は全てご返金致します。
+                      いろいろ悩んでいるより、一度見学に来られてはいかがでしょうか？同じ悩みを持って語学を始めた日本人スタッフが何でもご質問にお答えさせていただきます。1981年の創立以来、ひとりひとりを大切にをモットーに、多くの世界の架け橋になる方々を輩出して来ました。ちょっとお茶をするような気分でのぞいてみてください。小さいけれど一流の教師と家族のようなスタッフがあなたの夢を現実に近づけます。
                     </li>
                   </ol>
                 </h5>
@@ -1156,8 +1154,7 @@
           </div>
         </div>
 
-        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
-          class="btn btn-danger btn-raised" style="width: 200px">
+        <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank" class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play">　</i>Matt先生　</a>
         <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">About</a>
 
