--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -145,32 +145,32 @@
 						</a>
 						<ul class="dropdown-menu">
 							<li>
-								<a href="#">
+								<a href="lesson-course-everyday.html">
 									日常英会話
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-everyday.html">
 									ビジネス英会話
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-info.html">
+								<a href="lesson-course-toeic.html">
 									TOEIC・英検
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-info.html">
+								<a href="lesson-course-toeic.html">
 									TOEFL・IELTS
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-airline.html">
 									医療英会話
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a href="lesson-course-airline.html">
 									企業内語学研修
 								</a>
 							</li>
