re-added pricing to toeic page

--- a/lesson-course-toeic.html
+++ b/lesson-course-toeic.html
@@ -541,11 +541,11 @@
 
 
 
-			<!-- <div class="cd-section" id="pricing"> -->
+			<div class="cd-section" id="pricing">
 
-			<!--     *********    PRICING 5     *********      -->
+				<!--     *********    PRICING 5     *********      -->
 
-			<!-- <div class="pricing-5 section-gray" id="pricing-5 lessons">
+				<div class="pricing-5 section-gray" id="pricing-5 lessons">
 
 					<div class="container">
 						<div class="row">
@@ -704,11 +704,11 @@
 						</div>
 
 					</div>
-				</div> -->
+				</div>
 
-			<!--     *********    END PRICING 5      *********      -->
+				<!--     *********    END PRICING 5      *********      -->
 
-			<!-- </div> -->
+			</div>
 
 
 
