Staff images, about-map changed and contact form edited.

--- a/index.html
+++ b/index.html
@@ -1070,7 +1070,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#">
-                      <img class="img" src="assets/img/faces/card-profile7-square.jpg" />
+                      <img class="img" src="assets/img/faces/ryan.jpg" />
                     </a>
                   </div>
                 </div>
@@ -1111,7 +1111,7 @@
                 <div class="col-md-5">
                   <div class="card-image">
                     <a href="#">
-                      <img class="img" src="assets/img/faces/card-profile2-square.jpg" />
+                      <img class="img" src="assets/img/faces/Akemi.jpg" />
                     </a>
                   </div>
                 </div>
@@ -1234,7 +1234,7 @@
                 <div class="row">
                   <div class="col-sm-6 tight-col">
                     <div class="info info-horizontal">
-                      <div class="icon icon-info icon-small">
+                      <!-- <div class="icon icon-info icon-small">
                         <i class="material-icons">phone</i>
                       </div>
                       <div class="description">
@@ -1245,22 +1245,22 @@
                           <br> 土曜/AM10:00～PM7:00
                           <br> (受付は12:30～、平日はPM8:00まで、土曜はPM6:00まで。日祝休）
                         </p>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                   <div class="col-sm-6 tight-col">
                     <div class="info info-horizontal">
-                      <div class="icon icon-info icon-small">
+                      <!-- <div class="icon icon-info icon-small">
                         <i class="material-icons">pin_drop</i>
-                      </div>
-                      <div class="description">
+                      </div> -->
+                      <!-- <div class="description">
                         <h5 class="info-title">Find us at the office</h5>
                         <p class="map-contact-info">
                           サンミハールランゲージサービス
                           <br> 〒650-0021
                           <br> 神戸市中央区三宮町1-4-13YSビル4F
                         </p>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
                 </div>
@@ -1289,12 +1289,6 @@
 
                 <div class="row">
                   <div class="col-md-6">
-                    <!-- <div class="checkbox">
-                      <label>
-                        <input type="checkbox" name="optionsCheckboxes">
-                        I'm not a robot
-                      </label>
-                    </div> -->
                     <div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
                   </div>
                   <div class="col-md-6">
