--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -244,12 +244,12 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/bg10.jpg');">
+	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/pilot.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h1 class="title">資格試験対策</h1>
+					<h1 class="title">航空英語・ICAO対策</h1>
 				</div>
 			</div>
 		</div>
@@ -274,34 +274,27 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">TOEIC・英検・TOEFL・IELTS</h2>
+							<h2 class="title">航空英語・ICAO対策</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
-							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">TOEIC</a>
-							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">英検</a>
-							<a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
-							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
+							<a href="#airline" class="btn btn-primary btn-round" style="width: 100%">航空英語（エアラインの英語） </a>
+							<a href="#icao" class="btn btn-primary btn-round" style="width: 100%">ICAO標準航空英語試験 </a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>
-
-								★ 試験対策をサンミハールに決めた理由<br>
-								① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br>
-								② 目標をクリアして海外に行った友人の口コミを聞いて。<br>
-								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
+							<!-- <h5>操縦士（パイロット）、客室乗務員（キャビンクルー、フライトアテンダント）、地上職（グランドスタッフ、グランドホステス）をはじめ、航空業界で働く方々にとって英会話能力は必須と言っても過言ではありません。それぞれの業務内容に合わせて必要とされる会話能力をマンツーマンのレッスンで磨きます。
 							</h5>
 							<h5>★実際のレッスン内容は？<br>
 								語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>
 								TOEIC
 								SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。<br>
 								◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
-							</h5>
-							<div class="col-sm-12 text-center" style="margin-top: 30px;">
+							</h5> -->
+							<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-							</div>
+							</div> -->
 						</div>
 					</div>
 
@@ -387,33 +380,26 @@
 						<div class="row">
 
 							<div class="col-md-10 col-md-offset-1">
-								<h2 class="title">試験対策コース</h2>
+								<h2 class="title">航空英語（エアラインの英語） </h2>
 
 								<br />
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
+								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="airline"></div>
 								<div class="card card-plain card-blog">
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
+												<img class="img img-raised" src="assets/img/examples/cabincrew.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">TOEIC</a>
+												<a href="#">航空英語（エアラインの英語） </a>
 											</h3>
 											<p>
-												神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。<br>
-												<strong>初心者(中学英語の理解に自信のない方)には基礎から丁寧に授業で学べます。その後以下の対策に進みます。</strong></p>
-											<ol>
-												<li>模試を受ける。</li>
-												<li>各パートに対しての理解度を「パーセンテージで評価」した分析表を元に弱点を確認する。</li>
-												<li>各問題に対する、また個人にあった勉強方法を無料カウンセリングで細く聞いて計画を立てる。</li>
-											</ol>
-											<p>など、以上は対策の一部です。詳しくはスクールにお問い合わせください。</p>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-											</div>
+												操縦士（パイロット）、客室乗務員（キャビンクルー、フライトアテンダント）、地上職（グランドスタッフ、グランドホステス）をはじめ、航空業界で働く方々にとって英会話能力は必須と言っても過言ではありません。それぞれの業務内容に合わせて必要とされる会話能力をマンツーマンのレッスンで磨きます。
+												<div class="col-sm-12 text-center" style="margin-top: 30px;">
+													<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+												</div>
 										</div>
 									</div>
 								</div>
@@ -425,15 +411,15 @@
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/eiken.jpg" />
+												<img class="img img-raised" src="assets/img/examples/pilot-01.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">英検</a>
+												<a href="#">操縦士（パイロット）の英語</a>
 											</h3>
 											<p>
-												「過去問を制する者は英検を制する！」英検の一次試験対策はお金をかけず、自宅でひたすら過去問を解くこと。とは言っても、一人でできない、わからないところは、レッスンで日本語で聞いて話して弱点補強し、合格ラインへと押し上げます。一次試験の作文対策は宿題で書いて来られた作文をネイティブ講師に添削してもらうのが、ベスト！一次、二次試験を問わず、サンミハールの単語テストで語彙力アップ！英検１級、準１級、２級、準２級、３級の二次試験の面接対策は神戸・三宮の英会話サンミハールランゲージサービスのネイティブの講師に行ってもらうのが、経済的で効果的。高校１年生で準１級合格の実績！
+												「ICAO標準航空英語試験の内容や、実際の現場で必要な状況設定別での英語会話表現をマンツーマンのレッスンで学びます。コックピットの中で交わされる外国人パイロットや、ネイティブの管制塔員との会話などをよりスムーズに行うための広範囲に渡る会話力の習得を目指します。また、緊急時等、即座に的確な判断が要求される状況下での対応が英語で出来るようになるトレーニングを行います。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
@@ -449,34 +435,27 @@
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/tofel.jpg" />
+												<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">TOEFL</a>
+												<a href="#">客室乗務員（キャビンクルー、フライトアテンダント）の英語</a>
 											</h3>
 											<p>
-												神戸・三宮の英会話サンミハールランゲージサービスのTOEFL（トフル）対策はここがお得！ 自宅で出来ることは自宅で、ネイティブ講師の指導が必要な部分は授業で行いますので、自分に必要のない講義を聞くような授業にお金を払う必要がなく、無駄なく効率的にスクールを活用していただけます。TOEFL（トフル）対策は英語を聞けて、読めて、書ける、または話せるという3技能ずつを組み合わせて使用出来る能力習得の為のトレーニングを行います。
+												業務で必要なコミュニケーションはもちろんのこと、接客時に必要な、丁寧できめ細やかな英語表現を状況別にマンツーマンのレッスンで学びます。客室乗務員にとって、リスニング力はスピーキング力よりさらに重要です。英語で行われる機長アナウンス、他のクルーとの業務連絡が確実に聞き取れることはもちろんのこと、外国人乗客の様々な訛りの英語を聞き取れるようになるまで、何度もトレーニングを行います。
 											</p>
+											<h4>★これから客室乗務員、地上職員になりたい方の英語対策</h4>
 											<ol>
-												<li>TOEFL （トフル）ボキャビル対策（語彙を増やす）</li>
-												<li>TOEFL （トフル）リーディング対策</li>
-												<li>TOEFL （トフル）リスニング対策</li>
-												<li>TOEFL （トフル）スピーキング対策</li>
-												<li>TOEFL （トフル）ライティング（作文）対策</li>
-												<li>TOEFL （トフル）パソコン対策</li>
+												<li>TOEIC対策<br>
+													国内航空会社ではTOEIC600点以上、外資系航空会社ではTOEIC800点以上が必要とされています。TOEICを短期間で得点アップするレッスンはTOEIC対策のページをご覧ください
+												</li>
+												<li>航空会社の英語面接対策-<br>
+													自己紹介から志望動機、自分の能力、適応性などを理由をつけてきちんと英語で伝えることが出来るようになる会話のトレーニングを実際の面接形式で行います。
+												</li>
 											</ol>
-											<p>の６つの対策を個人のレベル、必要性に合わせてカリキュラムを組み計画的に学んでいきます。
-												例えば、<br>
-												スピーキングのトレーニング<br>
-												Independent taskの対策-よく出題される仮定法や、未来形を使った文章がスラスラと出てくるようになるまで、スピーチまたはロールプレイ形式のスピーキングのトレーニング。<br>
-												Integrated taskの対策-スピーキングと同時にリーディングやリスニングでのメモの取り方も合わせて授業で学ぶ。<br>
-												など。
-											</p>
-											<p>★TOEFL （トフル）対策をされた生徒さんの体験談<br>
-												サンミハールに通っている間に高校留学を決意。2年時にニュージーランドに9か月留学、帰国後サンミハールに通いながらアメリカの大学に行くため、TOEFL（トフル）550（iBT80）点以上を目指して勉強。サンミハールでは主にスピーキングとライティングの対策を実施。高校の授業でライティング、読解を怠らず頑張ったことも手伝って約1年半で580(iBT92)点を獲得。北テキサス大学に合格。大学では1学期終了ですぐprincipal
-												listに載るオールAの成績を収めることが出来た。など多数。
+											<h4>現在航空会社に勤務中の方の実践英会話</h4>
+											<p>様々な状況、乗客の要望に丁寧にかつ適切に応えられる様、より広範囲での会話をマンツーマンおよびフリーカンバセーションで学びます。これまでサンミハールで学んで来られた数多くの現役客室乗務員の方々からのご意見を参考として、すぐに現場で役立つ英語を使えるようになります。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
@@ -487,36 +466,33 @@
 
 								<hr class="hr-dark-blue">
 
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
+								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="icao"></div>
 								<div class="card card-plain card-blog">
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/ielts.jpg" />
+												<img class="img img-raised" src="assets/img/examples/icao.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">IELTS</a>
+												<a href="#">ICAO標準航空英語試験 </a>
 											</h3>
 											<p>
-												神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
-												IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。<br>
-												IELTS （アイエルツ）　ボキャビル対策（語彙を増やす）<br>
-												IELTS（アイエルツ） リスニング対策<br>
-												IELTS （アイエルツ）リーディング対策<br>
-												IELTS （アイエルツ）ライティング（作文）対策<br>
-												IELTS （アイエルツ）スピーキング対策<br>
-												例えば、<br>
-												ライティングのトレーニング<br>
-												ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
+												ICAO-International Civil Aviation
+												Organization（国際民間航空機関）の略。国連の専門機関の1つ。2008年3月以降、操縦士や管制官等は航空英語能力を証明することが要件となり、語学能力レベルは6段階のうち、実用レベル（レベル4）以上であることが必要です。実用レベル（level-4）の証明の有効期間は3年。また国土交通省の東京航空局、大阪航空局の両局内の情報官の一部の方々にもICAO標準航空英語のlevel-4(Operational
+												level)が必要とされるようになりました。残念ながら、必須である言語技能の習得に関しては個人的に試験対策本などを利用して行うより方途がなかったのですが、神戸ではサンミハールが初めて「ICAO標準航空英語試験の対策プログラム」を実試験の形式に沿った会話形式で行うようになりパイロットを始め、これから航空業界で働きたいと思っている方々にもお役に立っています。
 											</p>
+											<h4>授業内容</h4>
 											<ol>
-												<li>書き方のコツを授業で学ぶ</li>
-												<li>ライティング練習問題の宿題　箇条書き、本文の両方を提出</li>
-												<li>添削してもらった文章の見直しとポイントを授業で確認</li>
-												<li>１～３を繰り返す</li>
+												<li>Single Picture Card</li>
+												<li>Sequence Picture Card</li>
+												<li>Daily Conversation</li>
+												<li>Role Play</li>
 											</ol>
+											<p>レッスン時間<br>
+												マンツーマン形式（プライベートレッスン）で行います。受講生の現在の会話能力によって必要とされる時間数は変わって来ますが、短期集中レッスンも可能です。お気軽にご相談下さい。電話078-331-3035
+											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 											</div>
