--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -244,7 +244,7 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/bg10.jpg');">
+	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/business.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
@@ -395,7 +395,7 @@
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
+												<img class="img img-raised" src="assets/img/examples/talk-1.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
@@ -426,7 +426,7 @@
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/eiken.jpg" />
+												<img class="img img-raised" src="assets/img/examples/business-3.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
