images on everday page changed

--- a/lesson-course-everyday.html
+++ b/lesson-course-everyday.html
@@ -395,7 +395,7 @@
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/talk-1.jpg" />
+												<img class="img img-raised" src="assets/img/examples/talk-2.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
@@ -426,7 +426,7 @@
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/business-3.jpg" />
+												<img class="img img-raised" src="assets/img/examples/business-4.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
@@ -441,34 +441,54 @@
 												<strong>●ビジネスミーティング</strong><br>
 												ビジネス英会話の基礎ではミーティングでの発言に必要とされる基本的な英語会話力を養成すると同時に、発言回数が少なくてもうまくあいづちを打つなどの練習を行い、まずはよい聞き役になるためのトレーニングをします。ある程度苦手意識がなくなってきたところで、自分がイニシアティブをとって話すための表現、技法を学び具体的な（出来れば実際の仕事に関連した内容で）模擬会議の練習を行い実践力を養います。
 											</p>
-											<p>
-												<strong>●ファシリテーション</strong><br>
-												英語で行われるミーティングにおいて、ファシリテーター（進行役）がファシリテーションの表現や手法を身に着けているかどうかは重要です。ビジネスミーティングでどうすれば英語でうまく進行できるのか基本的な表現や手法をケーススタディ形式で学びます。既に経験のある方は、さらに議論を活性化するために効果的な英語表現や技法をネイティブの視点で学びます。
-											</p>
-											<p>
-												<strong>●電話・メール</strong><br>
-												ビジネスシーンでの電話の応対、メールはビジネス英語の中でも比較的早く習得出来ます。職種、業種がはっきりしている場合は電話、メールの内容ごとに基本の文章をその方の会社で必要な用語を用いるなどしてひな形を作成し、応用の練習を行います。プライベートレッスンを受講の方はメールの文章は急がないものであれば宿題として無料で添削が出来ます。
-											</p>
-											<p>
-												<strong>●社内での会話</strong><br>
-												ビジネスシーンにおいて立場によっては、報告、説明などほとんどひとりで発話をしなければならない場合もあります。そのためには論理的に話すトレーニングが重要になってきます。業種、役職などによって異なる英語の表現方法を具体的な事例によって学び、職場で実践的に使えるようにします。例：外国人上司との会話、外国人作業員への説明など
-											</p>
-											<p>
-												<strong>●一般ビジネス英語・英会話</strong><br>
-												将来、職場で英語を使って仕事をされたい方、または現在職場で日常的に英語を使用する方のためのプログラムです。初級から上級まで、レベルにあわせてシーン別のビジネス英会話を学びます。職場で英語は必要だが初心者の方には、簡単な文法で現在の職場で特に必要な表現から無理なく学んでいただけます。
-											</p>
-											<p>
-												<strong>●海外出張・赴任準備</strong><br>
-												<a href="#">海外赴任準備のページ</a>をご参照下さい。
-											</p>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-											</div>
 										</div>
 									</div>
-								</div>
+									<div class="card card-plain card-blog">
+										<div class="row">
+											<div class="col-md-4">
+												<div class="card-image">
+													<img class="img img-raised" src="assets/img/examples/business-3.jpg" />
+												</div>
+											</div>
+											<div class="col-md-8">
+												<p>
+													<strong>●ファシリテーション</strong><br>
+													英語で行われるミーティングにおいて、ファシリテーター（進行役）がファシリテーションの表現や手法を身に着けているかどうかは重要です。ビジネスミーティングでどうすれば英語でうまく進行できるのか基本的な表現や手法をケーススタディ形式で学びます。既に経験のある方は、さらに議論を活性化するために効果的な英語表現や技法をネイティブの視点で学びます。
+												</p>
+												<p>
+													<strong>●電話・メール</strong><br>
+													ビジネスシーンでの電話の応対、メールはビジネス英語の中でも比較的早く習得出来ます。職種、業種がはっきりしている場合は電話、メールの内容ごとに基本の文章をその方の会社で必要な用語を用いるなどしてひな形を作成し、応用の練習を行います。プライベートレッスンを受講の方はメールの文章は急がないものであれば宿題として無料で添削が出来ます。
+												</p>
+											</div>
+										</div>
+										<div class="card card-plain card-blog">
+											<div class="row">
+												<div class="col-md-4">
+													<div class="card-image">
+														<img class="img img-raised" src="assets/img/examples/business-5.jpg" />
+													</div>
+												</div>
+												<div class="col-md-8">
+													<p>
+														<strong>●社内での会話</strong><br>
+														ビジネスシーンにおいて立場によっては、報告、説明などほとんどひとりで発話をしなければならない場合もあります。そのためには論理的に話すトレーニングが重要になってきます。業種、役職などによって異なる英語の表現方法を具体的な事例によって学び、職場で実践的に使えるようにします。例：外国人上司との会話、外国人作業員への説明など
+													</p>
+													<p>
+														<strong>●一般ビジネス英語・英会話</strong><br>
+														将来、職場で英語を使って仕事をされたい方、または現在職場で日常的に英語を使用する方のためのプログラムです。初級から上級まで、レベルにあわせてシーン別のビジネス英会話を学びます。職場で英語は必要だが初心者の方には、簡単な文法で現在の職場で特に必要な表現から無理なく学んでいただけます。
+													</p>
+													<p>
+														<strong>●海外出張・赴任準備</strong><br>
+														<a href="#">海外赴任準備のページ</a>をご参照下さい。
+													</p>
+													<div class="col-sm-12 text-center" style="margin-top: 30px;">
+														<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
+													</div>
+												</div>
+											</div>
+										</div>
 
-								<!-- <hr class="hr-dark-blue">
+										<!-- <hr class="hr-dark-blue">
 
 								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toefl"></div>
 								<div class="card card-plain card-blog">
@@ -511,9 +531,9 @@
 									</div>
 								</div> -->
 
-								<!-- <hr class="hr-dark-blue"> -->
+										<!-- <hr class="hr-dark-blue"> -->
 
-								<!-- <div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
+										<!-- <div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
 								<div class="card card-plain card-blog">
 									<div class="row">
 										<div class="col-md-4">
@@ -550,16 +570,16 @@
 									</div>
 								</div> -->
 
-							</div>
+									</div>
 
+								</div>
+
+							</div>
 						</div>
 
+						<!--     *********    END BLOGS 3      *********      -->
+
 					</div>
-				</div>
-
-				<!--     *********    END BLOGS 3      *********      -->
-
-			</div>
 
 
 
@@ -567,11 +587,11 @@
 
 
 
-			<!-- <div class="cd-section" id="pricing"> -->
+					<!-- <div class="cd-section" id="pricing"> -->
 
-			<!--     *********    PRICING 5     *********      -->
+					<!--     *********    PRICING 5     *********      -->
 
-			<!-- <div class="pricing-5 section-gray" id="pricing-5 lessons">
+					<!-- <div class="pricing-5 section-gray" id="pricing-5 lessons">
 
 					<div class="container">
 						<div class="row">
@@ -732,108 +752,108 @@
 					</div>
 				</div> -->
 
-			<!--     *********    END PRICING 5      *********      -->
+					<!--     *********    END PRICING 5      *********      -->
 
-			<!-- </div> -->
-
-
-
-			<hr>
+					<!-- </div> -->
 
 
 
+					<hr>
 
 
-			<div class="container" id="contactus">
 
-				<div class="section section-contacts">
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-							<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
-							<h4 class="text-left description">
-								お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
-								<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
-							</h4>
-							<h4 class="text-left description">
-								下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
-								<strong>（078-331-3035）</strong>にてご連絡ください。
-							</h4>
-							<form class="contact-form" role="form" method="post" action="contact.php">
-								<div class="row">
-									<div class="col-md-12">
-										<div class="form-group label-floating">
-											<label class="control-label">お名前（必須）</label>
-											<input name="name" type="text" class="form-control" required>
+
+
+					<div class="container" id="contactus">
+
+						<div class="section section-contacts">
+							<div class="row">
+								<div class="col-md-8 col-md-offset-2">
+									<h2 class="text-center title">今すぐ無料体験レッスンを申し込む</h2>
+									<h4 class="text-left description">
+										お問合せや無料体験レッスンのお申込みは、お電話<strong>（078-331-3035）</strong>、
+										<a href="mailto:study@sunmihall.com">メール</a>、または以下のお問合せフォームからお気軽にご連絡ください。
+									</h4>
+									<h4 class="text-left description">
+										下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
+										<strong>（078-331-3035）</strong>にてご連絡ください。
+									</h4>
+									<form class="contact-form" role="form" method="post" action="contact.php">
+										<div class="row">
+											<div class="col-md-12">
+												<div class="form-group label-floating">
+													<label class="control-label">お名前（必須）</label>
+													<input name="name" type="text" class="form-control" required>
+												</div>
+											</div>
 										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">メールアドレス（必須）</label>
-											<input name="email" type="email" class="form-control" required>
+										<div class="row">
+											<div class="col-md-6">
+												<div class="form-group label-floating">
+													<label class="control-label">メールアドレス（必須）</label>
+													<input name="email" type="email" class="form-control" required>
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="form-group label-floating">
+													<label class="control-label">メールアドレス（確認用）</label>
+													<input name="email-confirm" type="email" class="form-control" required>
+												</div>
+											</div>
 										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">メールアドレス（確認用）</label>
-											<input name="email-confirm" type="email" class="form-control" required>
+										<div class="row">
+											<div class="col-md-6">
+												<div class="form-group label-floating">
+													<label class="control-label">電話番号（必須）</label>
+													<input name="phone" type="text" class="form-control" required>
+												</div>
+											</div>
+											<div class="col-md-6">
+												<div class="form-group label-floating">
+													<label class="control-label">折り返しのお電話ご希望の時間帯</label>
+													<input name="time" type="text" class="form-control">
+												</div>
+											</div>
 										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">電話番号（必須）</label>
-											<input name="phone" type="text" class="form-control" required>
-										</div>
-									</div>
-									<div class="col-md-6">
-										<div class="form-group label-floating">
-											<label class="control-label">折り返しのお電話ご希望の時間帯</label>
-											<input name="time" type="text" class="form-control">
-										</div>
-									</div>
-								</div>
 
-								<div class="form-group label-floating">
-									<label class="control-label">お問い合わせ内容</label>
-									<textarea name="message" class="form-control" rows="4" required></textarea>
-								</div>
+										<div class="form-group label-floating">
+											<label class="control-label">お問い合わせ内容</label>
+											<textarea name="message" class="form-control" rows="4" required></textarea>
+										</div>
 
-								<div class="row">
-									<div class="col-md-5 col-md-offset-1 text-center">
-										<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
-									</div>
-									<div class="col-md-5 text-center">
-										<button class="btn btn-primary btn-raised">
-											送信
-											<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
-										</button>
-									</div>
+										<div class="row">
+											<div class="col-md-5 col-md-offset-1 text-center">
+												<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
+											</div>
+											<div class="col-md-5 text-center">
+												<button class="btn btn-primary btn-raised">
+													送信
+													<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
+												</button>
+											</div>
+										</div>
+									</form>
 								</div>
-							</form>
+							</div>
+
 						</div>
+
 					</div>
+					<!-- container -->
+
+
+
+
+
+
+
 
 				</div>
 
 			</div>
-			<!-- container -->
+			<!-- main main-raised -->
 
-
-
-
-
-
-
-
-		</div>
-
-	</div>
-	<!-- main main-raised -->
-
-	<!-- <footer class="footer">
+			<!-- <footer class="footer">
 		<div class="container">
 			<a class="footer-brand" href="#">Material Kit PRO</a>
 
@@ -887,33 +907,33 @@
 		</div>
 	</footer> -->
 
-	<footer class="footer">
-		<div class="container">
-			<nav class="pull-left">
-				<ul>
-					<li>
-						<a href="index.html">
-							Sun Mihall Language Services
-						</a>
-					</li>
-					<li>
-						<a href="about.html">
-							About Us
-						</a>
-					</li>
-				</ul>
-			</nav>
-			<div class="copyright pull-right">
-				&copy;
-				<script>
-					document.write(new Date().getFullYear())
-				</script>, made with
-				<i class="fa fa-heart heart"> by
-					<a href="http://www.kobedesignlab.com" target="_blank">KobeDesignLab</a>
-				</i>
-			</div>
-		</div>
-	</footer>
+			<footer class="footer">
+				<div class="container">
+					<nav class="pull-left">
+						<ul>
+							<li>
+								<a href="index.html">
+									Sun Mihall Language Services
+								</a>
+							</li>
+							<li>
+								<a href="about.html">
+									About Us
+								</a>
+							</li>
+						</ul>
+					</nav>
+					<div class="copyright pull-right">
+						&copy;
+						<script>
+							document.write(new Date().getFullYear())
+						</script>, made with
+						<i class="fa fa-heart heart"> by
+							<a href="http://www.kobedesignlab.com" target="_blank">KobeDesignLab</a>
+						</i>
+					</div>
+				</div>
+			</footer>
 
 </body>
 <!--   Core JS Files   -->
