added a tag and href to airline page toeic text.

--- a/lesson-course-airline.html
+++ b/lesson-course-airline.html
@@ -448,7 +448,7 @@
 											<h4>★これから客室乗務員、地上職員になりたい方の英語対策</h4>
 											<ol>
 												<li>TOEIC対策<br>
-													国内航空会社ではTOEIC600点以上、外資系航空会社ではTOEIC800点以上が必要とされています。TOEICを短期間で得点アップするレッスンはTOEIC対策のページをご覧ください
+													国内航空会社ではTOEIC600点以上、外資系航空会社ではTOEIC800点以上が必要とされています。TOEICを短期間で得点アップするレッスンは<a href="lesson-course-toeic.html" target="_blank">TOEIC対策のページをご覧ください</a>
 												</li>
 												<li>航空会社の英語面接対策-<br>
 													自己紹介から志望動機、自分の能力、適応性などを理由をつけてきちんと英語で伝えることが出来るようになる会話のトレーニングを実際の面接形式で行います。
