--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
                 </a>
               </li>
               <li>
-                <a href="lesson-course-airline.html">
+                <a href="lesson-course-medical.html">
                   医療英会話
                 </a>
               </li>
               <li>
-                <a href="lesson-course-airline.html">
+                <a href="lesson-course-medical.html">
                   企業内語学研修
                 </a>
               </li>
@@ -205,7 +205,7 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="lesson-course-airline.html">
                   航空英語・ICAO対策
                 </a>
               </li>
