--- a/lesson-course-medical.html
+++ b/lesson-course-medical.html
@@ -22,7 +22,7 @@
 	<meta name="robots" content="ALL">
 	<meta name="keywords" content="英会話　神戸, 英会話　三宮, 　英会話　マンツーマン, 英会話サンミハールランゲージサービス　サンミハール, Sun Mihall, Sunmihall">
 	<meta name="author" content="神戸・三宮の英会話サンミハールランゲージサービス">
-	<meta name="Description" content=TOEFL、IELTS対策なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。日常英会話上達と英検、TOEIC、TOEFL、IELTS他試験対策を同時に学べます。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！ />
+	<meta name="Description" content="医療英会話・病院の英語なら神戸三宮の英会話スクール、サンミハールランゲージサービス。授業はネイティブ。またカウンセリングは日本人スタッフと楽しく目標達成まで毎回でも無料。医師、看護師、薬剤師、病院受付業務、製薬会社勤務の方々の英語。マンツーマン月謝制とチケット制が選べるスクールでお得にレッスン。無料体験レッスン受付中！" />
 
 	<meta property="og:title" content="神戸・三宮の英会話サンミハールランゲージサービス">
 	<meta property="og:type" content="school">
@@ -32,7 +32,7 @@
 	<meta name="title" content="サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス">
 
 
-	<title>サンミハール　| 英会話　神戸　三宮　マンツーマン 英会話サンミハール | 神戸・三宮の英会話サンミハールランゲージサービス</title>
+	<title>神戸英会話なら三宮のサンミハール｜医療英会話・病院の英語</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 
@@ -170,7 +170,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-medical.html">
+								<a href="lesson-course-corporate.html">
 									企業内語学研修
 								</a>
 							</li>
@@ -244,12 +244,12 @@
 		</div>
 	</nav>
 
-	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/bg10.jpg');">
+	<div class="page-header header-filter header-small" data-parallax="true" style="background-image: url('assets/img/medi-1.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h1 class="title">資格試験対策</h1>
+					<h1 class="title">医療英会話（病院の英語）</h1>
 				</div>
 			</div>
 		</div>
@@ -274,30 +274,18 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">TOEIC・英検・TOEFL・IELTS</h2>
+							<h2 class="title">医療英会話・メディカルの英語</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
-							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">TOEIC</a>
-							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">英検</a>
-							<a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
-							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
+							<a href="#doctor" class="btn btn-primary btn-round" style="width: 100%">ドクター（医者・医師）の英会話</a>
+							<a href="#nurse" class="btn btn-primary btn-round" style="width: 100%">看護師の英会話</a>
 						</div>
 						<div class="col-md-8 col-md-offset-1">
-							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>
-
-								★ 試験対策をサンミハールに決めた理由<br>
-								① 無料体験レッスンで、実際のテスト形式の授業を受けて自分にもできると思えた。<br>
-								② 目標をクリアして海外に行った友人の口コミを聞いて。<br>
-								③ 料金がお手頃な上にネイティブの授業なので試験対策をしながら会話力もアップできそう。
-							</h5>
-							<h5>★実際のレッスン内容は？<br>
-								語学力の世界基準であるCEFRにも対応した英会話サンミハールのレベルチェックまたはPractice Test等による弱点の解析を行い、個人にあったレッスンプランを立てて短期、長期での目標設定をします。実践に即したレッスン内容で、その都度評価の確認ができるので、今自分がどのレベルにいるのか、後何をすれば良いのかが具体的にわかります。<br><br>
-								TOEIC
-								SpeakingやWriting、英検の作文に二次面接試験、そしてTOEFL・IELTSのWritingにSpeakingの対策は試験対策の経験豊かなネイティブに教わるのが効果的。試験全般にわたる弱点の改善、強化すべき点は授業外の日本人カウンセラーによって無料で行われます。また解き方のコツなども日本語での解説が必要な場合は教師に授業中に、または日本人カウンセラーに授業外で日本語で聞くことが出来ます。サンミハールでは自分で出来ることは自分で、出来ないことは授業でやりましょうという、経済的で効果的な試験対策を行っています。<br>
-								◎初心者の方には基礎的な英語力の養成を授業で行いつつ、宿題等によって中学英語レベルまで引き上げ試験の対策に移ります。
+							<h5>1981年の開校当時からドクターのレッスンは三宮のサンミハールと口コミで広がり、医師、看護師、薬剤師、病院受付等、
+								多くの医療従事者の方が来られています。また神戸市は「神戸医療産業都市」を推進しており、今後益々海外からの医療関連企業の進出も考えられ医療従事者の英語は必須となって来ています。
 							</h5>
 							<div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
@@ -387,30 +375,44 @@
 						<div class="row">
 
 							<div class="col-md-10 col-md-offset-1">
-								<h2 class="title">試験対策コース</h2>
+								<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
+								<h2 class="title">医療英会話・メディカルの英語コース</h2>
 
 								<br />
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
+								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="doctor"></div>
 								<div class="card card-plain card-blog">
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/card-blog4.jpg" />
+												<img class="img img-raised" src="assets/img/examples/medi-2.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">TOEIC</a>
+												<a href="#">ドクター（医者・医師）の英会話</a>
 											</h3>
-											<p>
-												神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。<br>
-												<strong>初心者(中学英語の理解に自信のない方)には基礎から丁寧に授業で学べます。その後以下の対策に進みます。</strong></p>
-											<ol>
-												<li>模試を受ける。</li>
-												<li>各パートに対しての理解度を「パーセンテージで評価」した分析表を元に弱点を確認する。</li>
-												<li>各問題に対する、また個人にあった勉強方法を無料カウンセリングで細く聞いて計画を立てる。</li>
-											</ol>
-											<p>など、以上は対策の一部です。詳しくはスクールにお問い合わせください。</p>
+											<ul>
+												<li>
+													<h4>院内での外国人患者との会話</h4>
+													<p>教師と問診から疾患・症状別の説明までロールプレイで行います。</p>
+												</li>
+												<li>
+													<h4>海外の病院での研修準備</h4>
+													<p>日常会話から院内での様々な状況での会話までロールプレイで行います。</p>
+												</li>
+												<li>
+													<h4>USMLE（United States Medical Licensing Examination）＝米国医師国家試験STEP2CS面接対策</h4>
+													<p>多くの医療従事者の方々のご意見や現場の声、また米国医師国家試験に実際に合格された医師である方々の経験を元にカリキュラムを組んでいます。</p>
+												</li>
+												<li>
+													<h4>海外赴任準備</h4>
+													<p>海外赴任は本人だけでなく、家族にとっても大きな負担がかかります。本人はもちろんのこと、ご家族の方が安心して、出発出来るよう英語だけでなく海外の慣習や海外で出来ることなどを経験豊かなサンミハールの教師から学ぶことが出来ます。</p>
+												</li>
+												<li>
+													<h4>学会発表準備</h4>
+													<p>研究結果の発表はスラスラと出来ても、質疑応答になるとなかなかうまくいきません。ご自分の発表する内容を考えるだけで精いっぱいという方も多いでしょう。ぜひサンミハールの授業で、様々な質疑応答の仕方を実践で学んで下さい。通うお時間のない方はWEBレッスンでも出来ます。メールで送っていただいたドキュメントファイルをスクリーンで見ながら、プレゼンから質疑応答まで納得いくまでネイティブと練習出来ます。</p>
+												</li>
+											</ul>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 											</div>
@@ -420,103 +422,39 @@
 
 								<hr class="hr-dark-blue">
 
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="eiken"></div>
+								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="nurse"></div>
 								<div class="card card-plain card-blog">
 									<div class="row">
 										<div class="col-md-4">
 											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/eiken.jpg" />
+												<img class="img img-raised" src="assets/img/examples/medi-4.jpg" />
 											</div>
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">英検</a>
+												<a href="#">看護師の英会話</a>
 											</h3>
-											<p>
-												「過去問を制する者は英検を制する！」英検の一次試験対策はお金をかけず、自宅でひたすら過去問を解くこと。とは言っても、一人でできない、わからないところは、レッスンで日本語で聞いて話して弱点補強し、合格ラインへと押し上げます。一次試験の作文対策は宿題で書いて来られた作文をネイティブ講師に添削してもらうのが、ベスト！一次、二次試験を問わず、サンミハールの単語テストで語彙力アップ！英検１級、準１級、２級、準２級、３級の二次試験の面接対策は神戸・三宮の英会話サンミハールランゲージサービスのネイティブの講師に行ってもらうのが、経済的で効果的。高校１年生で準１級合格の実績！
-											</p>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-											</div>
-										</div>
-									</div>
-								</div>
-
-								<hr class="hr-dark-blue">
-
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toefl"></div>
-								<div class="card card-plain card-blog">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/tofel.jpg" />
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">TOEFL</a>
-											</h3>
-											<p>
-												神戸・三宮の英会話サンミハールランゲージサービスのTOEFL（トフル）対策はここがお得！ 自宅で出来ることは自宅で、ネイティブ講師の指導が必要な部分は授業で行いますので、自分に必要のない講義を聞くような授業にお金を払う必要がなく、無駄なく効率的にスクールを活用していただけます。TOEFL（トフル）対策は英語を聞けて、読めて、書ける、または話せるという3技能ずつを組み合わせて使用出来る能力習得の為のトレーニングを行います。
-											</p>
-											<ol>
-												<li>TOEFL （トフル）ボキャビル対策（語彙を増やす）</li>
-												<li>TOEFL （トフル）リーディング対策</li>
-												<li>TOEFL （トフル）リスニング対策</li>
-												<li>TOEFL （トフル）スピーキング対策</li>
-												<li>TOEFL （トフル）ライティング（作文）対策</li>
-												<li>TOEFL （トフル）パソコン対策</li>
-											</ol>
-											<p>の６つの対策を個人のレベル、必要性に合わせてカリキュラムを組み計画的に学んでいきます。
-												例えば、<br>
-												スピーキングのトレーニング<br>
-												Independent taskの対策-よく出題される仮定法や、未来形を使った文章がスラスラと出てくるようになるまで、スピーチまたはロールプレイ形式のスピーキングのトレーニング。<br>
-												Integrated taskの対策-スピーキングと同時にリーディングやリスニングでのメモの取り方も合わせて授業で学ぶ。<br>
-												など。
-											</p>
-											<p>★TOEFL （トフル）対策をされた生徒さんの体験談<br>
-												サンミハールに通っている間に高校留学を決意。2年時にニュージーランドに9か月留学、帰国後サンミハールに通いながらアメリカの大学に行くため、TOEFL（トフル）550（iBT80）点以上を目指して勉強。サンミハールでは主にスピーキングとライティングの対策を実施。高校の授業でライティング、読解を怠らず頑張ったことも手伝って約1年半で580(iBT92)点を獲得。北テキサス大学に合格。大学では1学期終了ですぐprincipal
-												listに載るオールAの成績を収めることが出来た。など多数。
-											</p>
-											<div class="col-sm-12 text-center" style="margin-top: 30px;">
-												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
-											</div>
-										</div>
-									</div>
-								</div>
-
-								<hr class="hr-dark-blue">
-
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
-								<div class="card card-plain card-blog">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="card-image">
-												<img class="img img-raised" src="assets/img/examples/ielts.jpg" />
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">IELTS</a>
-											</h3>
-											<p>
-												神戸・三宮の英会話サンミハールランゲージサービスは神戸三宮で一番にIELTS（アイエルツ）対策コースを開始したスクールです。IELTS（アイエルツ）のスピーキングと同時にIELTS（アイエルツ）のリーディングやIELTS（アイエルツ）のリスニングでのメモの取り方も授業で学べます。また、IELTSのライティングのポイントは授業で実際の作文の作業は自宅または空き教室で行うので大変経済的です。TOEFL（トフル）対策と同様、各セクションの対策を全般的に行う、または、個々の能力によって必要なセクション用の対策を別々に行うことが出来ます。
-												IELTS （アイエルツ）5.0、5.5、6.0、6.5、7.0、7.5、8.0、8.5、9.0　目標の方の対策です。<br>
-												IELTS （アイエルツ）　ボキャビル対策（語彙を増やす）<br>
-												IELTS（アイエルツ） リスニング対策<br>
-												IELTS （アイエルツ）リーディング対策<br>
-												IELTS （アイエルツ）ライティング（作文）対策<br>
-												IELTS （アイエルツ）スピーキング対策<br>
-												例えば、<br>
-												ライティングのトレーニング<br>
-												ほとんどの部分は宿題で行われます。 アカデミック・モジュールのTASK1は図や表からの読み取れる内容についての解説です。TASK2はトピックに対して自分の意見を理由をつけて述べる問題です。2つのタスクにはそれぞれの文章の冒頭に来るつなぎ言葉（transition words）が違います。最適なつなぎ言葉を使用することによって得点アップに繋がりますので、自分なりのひな型を作ってしまい、本文にフォーカス出来る時間を作ることが短期間での対策には効果的です。
-											</p>
-											<ol>
-												<li>書き方のコツを授業で学ぶ</li>
-												<li>ライティング練習問題の宿題　箇条書き、本文の両方を提出</li>
-												<li>添削してもらった文章の見直しとポイントを授業で確認</li>
-												<li>１～３を繰り返す</li>
-											</ol>
+											<ul>
+												<li>
+													<ul>
+														<li>院内での外国人患者との会話</li>
+														<li>海外の病院での研修準備</li>
+														<li>イギリス、ニュージーランド、オーストラリアで登録制度を利用して、海外で看護師として働くための準備</li>
+													</ul>
+												</li>
+												<li>
+													<h4>薬剤師の英会話</h4>
+													<p>実際の処方箋、医薬品の説明書等を使用して、患者への説明を英語で出来るようトレーニングします。</p>
+												</li>
+												<li>
+													<h4>病院受付業務の英会話</h4>
+													<p>一般的な受付から会計、保険、処方箋窓口業務など、実際の現場に即した会話をロールプレイで学びます。</p>
+												</li>
+												<li>
+													<h4>製薬会社等、外資系医療関連企業で働く方々の英会話</h4>
+													<p><a href="lesson-course-everyday" target="_blank">ビジネス英会話のページをご覧下さい。</a></p>
+												</li>
+											</ul>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 											</div>
