--- a/pricing.html
+++ b/pricing.html
@@ -170,7 +170,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="lesson-course-medical.html">
+								<a href="lesson-course-corporate.html">
 									企業内語学研修
 								</a>
 							</li>
