corporate navar name changed across all pages.

--- a/about.html
+++ b/about.html
@@ -169,7 +169,7 @@
 							</li>
 							<li>
 								<a href="lesson-course-corporate.html">
-									企業内語学研修
+									法人向け英語研修
 								</a>
 							</li>
 							<li>
