--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               </li>
               <li>
                 <a href="lesson-course-medical.html">
-                  企業内語学研修
+                  法人向け英語研修
                 </a>
               </li>
               <li>
